<resources
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Product Manager</string>
    <string name="main_subtitle">All Products</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--MAIN ACTIVITY STRINGS-->
    <string name="empty_view_text">No items in this category.</string>

    <!--PRODUCT LIST ITEM STRINGS-->
    <string name="product_quantity">
        Current stock level: <xliff:g name="quantity" example="150">%d</xliff:g>
        <xliff:g name="quantity_unit" example="kg">%s</xliff:g></string>

    <string name="product_price">
        Current price: €<xliff:g name="price" example="5.50">%1$.2f</xliff:g> per
        <xliff:g name="quantity_unit" example="kg">%2$s</xliff:g></string>

    <string name="product_sale">
        Sell 1 <xliff:g name="quantity_unit" example="kg">%s</xliff:g></string>

    <string name="product_details">Product Details</string>

    <string name="product_supplier">
        Current Supplier: <xliff:g name="supplier" example="Ace Meats Ltd.">%s</xliff:g></string>

    <string name="product_category">
        Category: <xliff:g name="category" example="Bakery">%s</xliff:g></string>

    <string name="order_prompt_message">
        You need to order more <xliff:g name="product" example="Bananas">%s</xliff:g>.
        See details for more information.</string>

    <!--NAV DRAWER TITLES-->
    <string name="nav_header_text">Category Browser</string>
    <string name="nav_subheader_text">Refresh product list by category</string>
    <string name="nav_category_menu_header">Categories</string>

    <!--PRODUCT DETAILS SCREEN STRINGS-->
    <string name="add_product_title">Add New Product</string>
    <string name="order_product">Make order</string>
    <string name="order_prompt">Stock empty, order more?</string>
    <string name="email_intent_chooser_header">Order by Email</string>
    <string name="email_subject">
        New <xliff:g name="product_name" example="Lemons">%s</xliff:g> order</string>
    <string name="snackbar_action_message">OK</string>
    <string name="product_delete">Delete item?</string>

    <string name="product_delete_dialog_title">
        Really Delete <xliff:g name="product_name" example="Lemons">%s</xliff:g> From Database?
    </string>
    <string name="product_delete_dialog_yes">Yes</string>
    <string name="product_delete_dialog_no">No</string>
    <string name="product_delete_confirmation">
        <xliff:g name="product_name" example="Lemons">%s</xliff:g> has been deleted.
    </string>
    <string name="product_delete_rejection">
        You chose not to delete <xliff:g name="product_name" example="Lemons">%s</xliff:g>.
    </string>
    <string name="product_decrease">-</string>
    <string name="product_increase">+</string>

    <!--ADD PRODUCT STRINGS-->
    <string name="enter_product_name">Enter Product Name</string>
    <string name="set_price_text">Set price per unit:</string>
    <string name="set_quantity_text">Set quantity:</string>
    <string name="set_supplier_text">Choose supplier:</string>
    <string name="set_category_text">Choose category:</string>
    <string name="add_new_product">Add new product to database?</string>
    <string name="initial_price">€0.00</string>
    <string name="valid_quantity_unit_text">You must choose a unit of quantity</string>
    <string name="valid_price_text">You must enter a valid price</string>
    <string name="valid_product_text">You must enter a product name</string>

    <!--CONFIRM DIALOG STRINGS-->
    <string name="yes_button_dialog_text">Yes</string>
    <string name="no_button_dialog_text">No</string>
    <string name="confirm_dialog_title">Confirm Details?</string>
    <string name="confirm_dialog_success">Product added successfully</string>
    <string name="confirm_dialog_cancel">Product not added</string>
    <string name="confirm_product_quantity">
        Stock: <xliff:g name="quantity" example="150">%d</xliff:g>
        <xliff:g name="quantity_unit" example="kg">%s</xliff:g></string>
    <string name="confirm_product_price">
        Price: €<xliff:g name="price" example="5.50">%1$.2f</xliff:g> per
        <xliff:g name="quantity_unit" example="kg">%2$s</xliff:g></string>

    <!--PLACEHOLDER STRINGS-->
    <string name="placeholder_product_name">Carrots</string>
    <string name="placeholder_product_category">Bakery</string>

    <!--CONTENT DESCRIPTION STRINGS-->
    <string name="content_desc_product_img">Product Image</string>
    <string name="image_choice_button_description">Scroll through image button</string>

    <!--STRINGS FOR DEALING WITH EXCEPTIONS -->
    <string name="url_exception">Problem with the request URL</string>
    <string name="response_code_exception" tools:ignore="PluralsCandidate">
        Error: <xliff:g name="response_code">%d</xliff:g> response code received
    </string>
    <string name="json_exception">Problem retrieving JSON correctly</string>
    <string name="parse_exception">Invalid date or problem with date formatting</string>
    <string name="http_request_exception">HTTP request error</string>
    <string name="no_network_connection">
        Error. No network connection or unable to connect to network.
    </string>
    <string name="null_pointer_exception">Error. No response code found.</string>
    <string name="keyboard_hide_exception">Error hiding keyboard</string>
    <string name="malformed_url_exception">Problem with the thumbnail URL</string>
    <string name="io_exception">Unknown IO exception</string>

    <!--Content Uri Exceptions-->
    <string name="content_uri_product_name_exception">Product requires a name</string>
    <string name="content_uri_product_price_exception">Product requires a valid price</string>
    <string name="content_uri_product_quantity_exception">Product requires a valid quantity</string>
    <string name="content_uri_product_quantity_unit_exception">Product quantity requires a valid unit</string>
    <string name="content_uri_category_name_exception">Category requires a name</string>
    <string name="content_uri_supplier_name_exception">Supplier requires a name</string>
    <string name="content_uri_supplier_address_exception">Supplier requires an address</string>
    <string name="content_uri_supplier_phone_exception">Supplier requires a phone number</string>
    <string name="content_uri_supplier_email_exception">Supplier requires a email</string>
    <string name="content_uri_unsupported_deletion_exception">Deletion is not supported for <xliff:g name="URI">%s</xliff:g></string>
    <string name="content_uri_unsupported_update_exception">Update is not supported for <xliff:g name="URI">%s</xliff:g></string>
    <string name="content_uri_unsupported_insertion_exception">Insertion is not supported for <xliff:g name="URI">%s</xliff:g></string>
    <string name="content_uri_insert_failure_exception">Failed to insert row for <xliff:g name="URI">%s</xliff:g></string>
    <string name="content_uri_unknown_exception">Unknown URI <xliff:g name="URI">%s</xliff:g> for <xliff:g name="UriMatcher">%d</xliff:g></string>
    <string name="choose_image">Choose Image</string>
    <string name="image_selection_error">Image selection failure</string>
    <string name="no_image_select_message">You didn\'t select and image</string>

</resources>