<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/list_item_padding">

    <TextView
        android:id="@+id/product_name"
        android:layout_alignParentTop="true"
        tools:text="@string/placeholder_product_name"
        style="@style/ListItemHeaderStyle"/>

    <ImageView
        android:id="@+id/product_image"
        android:src="@drawable/product_placeholder"
        android:layout_below="@id/product_name"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/content_desc_product_img"
        style="@style/ListItemViewStyle"/>

    <TextView
        android:id="@+id/product_quantity"
        android:layout_toEndOf="@id/product_image"
        android:layout_below="@id/product_name"
        tools:text="@string/product_quantity"
        style="@style/ListItemViewStyle"/>

    <TextView
        android:id="@+id/product_price"
        android:layout_toEndOf="@id/product_image"
        android:layout_below="@id/product_quantity"
        tools:text="@string/product_price"
        style="@style/ListItemViewStyle"/>

    <TextView
        android:id="@+id/product_category"
        android:layout_toEndOf="@id/product_image"
        android:layout_below="@id/product_price"
        tools:text="@string/product_category"
        style="@style/ListItemViewStyle"/>

    <TextView
        android:id="@+id/product_supplier"
        android:layout_toEndOf="@id/product_image"
        android:layout_below="@id/product_category"
        tools:text="@string/product_supplier"
        style="@style/ListItemViewStyle"/>

    <LinearLayout
        android:id="@+id/yes_no_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_supplier"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/yes_button"
            android:text="@string/yes_button_dialog_text"
            android:padding="@dimen/activity_horizontal_margin"
            style="@style/ListItemButtonStyle"/>

        <TextView
            android:id="@+id/no_button"
            android:text="@string/no_button_dialog_text"
            android:padding="@dimen/activity_horizontal_margin"
            style="@style/ListItemButtonStyle"/>

    </LinearLayout>


</RelativeLayout>