<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/list_item_padding">

    <TextView
        android:id="@+id/product_name"
        android:layout_alignParentTop="true"
        tools:text="@string/placeholder_product_name"
        style="@style/ListItemHeaderStyle"/>

    <ImageView
        android:id="@+id/product_image"
        android:layout_alignParentStart="true"
        android:layout_below="@id/product_name"
        tools:src="@drawable/carrots"
        android:contentDescription="@string/content_desc_product_img"
        style="@style/ListItemViewStyle"/>

    <TextView
        android:id="@+id/product_quantity"
        android:layout_toEndOf="@id/product_image"
        android:layout_below="@id/product_name"
        tools:text="@string/product_quantity"
        style="@style/ListItemViewStyle"/>

    <TextView
        android:id="@+id/product_price"
        android:layout_toEndOf="@id/product_image"
        android:layout_below="@id/product_quantity"
        tools:text="@string/product_price"
        style="@style/ListItemViewStyle"/>

    <TextView
        android:id="@+id/product_sale_button"
        android:layout_toEndOf="@id/product_image"
        android:layout_below="@id/product_price"
        tools:text="@string/product_sale"
        style="@style/ListItemButtonStyle"/>

    <TextView
        android:id="@+id/product_details_button"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/product_sale_button"
        android:text="@string/product_details"
        android:drawableEnd="@drawable/more_details"
        style="@style/ListItemButtonStyle"/>








</RelativeLayout>