<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_margin="@dimen/activity_horizontal_margin"
        tools:context="com.example.android.productmanager.AddNewProductActivity">

        <EditText
            style="@style/DetailViewStyle"
            android:id="@+id/name_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:focusedByDefault="false"
            android:clickable="true"
            android:maxLines="1"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:hint="@string/enter_product_name"/>

        <LinearLayout
            android:id="@+id/set_price_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_edit_text"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <TextView
                style="@style/DetailViewStyle"
                android:id="@+id/set_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_price_text"/>

            <SeekBar
                android:id="@+id/price_setter"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:thumb="@drawable/seekbar_thumb"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/set_quantity_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/set_price_layout"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <TextView
                style="@style/DetailViewStyle"
                android:id="@+id/set_quantity"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/set_quantity_text"/>

            <NumberPicker
                style="@style/DetailViewStyle"
                android:id="@+id/quantity_picker"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_margin="@dimen/list_item_view_padding"/>

            <NumberPicker
                style="@style/DetailViewStyle"
                android:id="@+id/unit_selector"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_margin="@dimen/list_item_view_padding"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/set_supplier_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/set_quantity_layout"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                style="@style/DetailViewStyle"
                android:id="@+id/set_supplier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_supplier_text"/>

            <Spinner
                android:id="@+id/supplier_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/set_category_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/set_supplier_layout"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                style="@style/DetailViewStyle"
                android:id="@+id/set_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_category_text"/>

            <Spinner
                android:id="@+id/category_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <TextView
            style="@style/DetailsButtonStyle"
            android:id="@+id/add_new_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/add_new_product"/>

    </RelativeLayout>
</ScrollView>